# week2-rust-mini-proj

./: Cargo.toml  Makefile  README.md  test.txt
.github/workflows/: lint.yml  release.yml  rustfmt.yml  tests.yml
src/: lib.rs  main.rs
tests/: cli.rs
