[package]
name = "grrs_hj"
version = "0.1.0"
edition = "2021"

authors = ["JuliaJHL hj146@duke.edu"]
license = "MIT OR Apache-2.0"
description = "A tool to search files"
readme = "README.md"
homepage = "https://github.com/JuliaJHL/week2-rust-mini-proj.git"
repository = "https://github.com/JuliaJHL/week2-rust-mini-proj.git"
keywords = ["cli", "search", "demo"]
categories = ["command-line-utilities"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
assert_cmd = "2.0.7"
predicates = "2.1.5"
assert_fs = "1.0.10"